# SPDX-License-Identifier: BSD-3-Clause
# Copyright 2019 NXP

# meson file, for building this example as part of a main DPDK build.
#
# To build this example as a standalone application with an already-installed
# DPDK instance, use 'make'

deps += ['cryptodev', 'security', 'eventdev']
allow_experimental_apis = true
sources = files(
	'main.c'
)
